# Online-Mart-WORK-IN-PROGRESS-

WORK/: compose.yaml
WORK/products/: Dockerfile.dev  pyproject.toml
WORK/products/products/: auth.py  main.py  product.proto  product_pb2.py
WORK/users/: Dockerfile.dev  pyproject.toml
WORK/users/templates/: reset_password.html
WORK/users/users/: auth.py  main.py  models.py  settings.py
