[tool.poetry]
name = "products"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlmodel = "^0.0.18"    
psycopg = "^3.1.19"
starlette = "^0.37.2"
aiokafka = "^0.10.0"
google = "^3.0.0"
protobuf = "^5.27.1"
psycopg-binary = "^3.1.19"
jose = {extras = ["cryptography"], version = "^1.0.0"}
python-jose = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
